add two new endpoints to manage users for environments
